--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="10dp"
         android:text="Mga Aralin"
         android:textSize="24sp"
@@ -28,7 +28,8 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="18dp"
         android:layout_marginEnd="10dp"
-        android:text="Panuto"
+        android:text="Layunin"
+        android:onClick="openLayunin"
         android:textSize="24sp"
         app:backgroundTint="@android:color/holo_blue_light"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,6 +45,7 @@
         android:layout_marginTop="18dp"
         android:layout_marginEnd="10dp"
         android:text="Isara"
+        android:onClick="isara"
         android:textSize="24sp"
         app:backgroundTint="@color/design_default_color_error"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,11 +55,12 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="535dp"
-        android:layout_height="345dp"
-        android:layout_marginTop="4dp"
+        android:layout_width="0dp"
+        android:layout_height="217dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:srcCompat="@drawable/shirley_lane_elementary_school" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
