--- a/app/src/main/res/drawable/sv_border.xml
+++ b/app/src/main/res/drawable/sv_border.xml
@@ -5,5 +5,5 @@
     <stroke android:width="1dp"
         android:color="#1C1B1B" />
 
-    <solid android:color="#F3F3F3" />
+    <solid android:color="#1a2e1c" />
 </shape>
