--- a/app/src/main/res/layout/activity_quiz_type2.xml
+++ b/app/src/main/res/layout/activity_quiz_type2.xml
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/quizNumTV"
+        android:id="@+id/quizNumTV1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/qNum"
+        android:id="@+id/qNum1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
@@ -48,22 +48,21 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/progressBar1"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="246dp"
         android:layout_height="8dp"
         android:layout_marginTop="24dp"
-        android:max="5"
         android:progress="0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.204"
-        app:layout_constraintStart_toEndOf="@+id/qNum"
+        app:layout_constraintStart_toEndOf="@+id/qNum1"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="0dp"
-        android:layout_height="230dp"
+        android:layout_height="300dp"
         android:layout_marginTop="52dp"
         android:background="@drawable/sv_border"
         android:fillViewport="true"
@@ -77,7 +76,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/questionTV"
+                android:id="@+id/questionTV1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10sp"
@@ -97,35 +96,35 @@
 
     <TextView
         android:id="@+id/ch1"
-        android:layout_width="289dp"
+        android:layout_width="150dp"
         android:layout_height="43dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="68dp"
         android:background="@drawable/default_option_border_bg"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:text="Choice 1"
         android:textColorHint="#292828"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
     <TextView
         android:id="@+id/ch2"
-        android:layout_width="289dp"
+        android:layout_width="150dp"
         android:layout_height="43dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="24dp"
         android:background="@drawable/default_option_border_bg"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:text="Choice 2"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ch1" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
     <Button
-        android:id="@+id/submitBTN"
+        android:id="@+id/submitBTN1"
         android:layout_width="219dp"
         android:layout_height="51dp"
         android:layout_marginTop="76dp"
