--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -114,7 +114,7 @@
         app:layout_constraintVertical_bias="0.85" />
 
     <TextView
-        android:id="@+id/isHideTV"
+        android:id="@+id/hasNextTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
